# theBeat

./: .contemporary.json  .gitignore  .gitmodules  .parlance.json  .travis.yml  CMakeLists.txt  Makefile  README.md  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  appveyor.yml  cdmodel.cpp  cdmodel.h  dbusadaptors.cpp  dbusadaptors.h  discordintegration.cpp  discordintegration.h  install_linux.sh  librarymanagedialog.cpp  librarymanagedialog.h  librarymanagedialog.ui  librarymanagewidget.cpp  librarymanagewidget.h  librarymanagewidget.ui  librarymodel.cpp  librarymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_aboutwindow.cpp  moc_dbusadaptors.cpp  moc_librarymanagedialog.cpp  moc_librarymodel.cpp  moc_mainwindow.cpp  moc_playlistlistwidget.cpp  moc_playlistmodel.cpp  moc_visualisationframe.cpp  nativeeventfilter.cpp  (+23 more)
application/: CMakeLists.txt  Info.plist  Info.plist.in  application.pro  appxmanifest.xml  artistsalbumswidget.cpp  artistsalbumswidget.h  artistsalbumswidget.ui  com.vicr123.thebeat-blueprint.desktop  com.vicr123.thebeat.desktop  com.vicr123.thebeat.metainfo.xml  com.vicr123.thebeat_blueprint.desktop  com.vicr123.thebeat_blueprint.metainfo.xml  common.cpp  common.h  controlstrip.cpp  controlstrip.h  controlstrip.ui  currenttrackpopover.cpp  currenttrackpopover.h  currenttrackpopover.ui  defaults.conf  icon-bp.icns  icon.icns  libraryerrorpopover.cpp  libraryerrorpopover.h  libraryerrorpopover.ui  lyricsdisplaywidget.cpp  lyricsdisplaywidget.h  lyricsdisplaywidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node-appdmg-config-bp.json  othersourceswidget.cpp  othersourceswidget.h  othersourceswidget.ui  playlistmodel.cpp  playlistmodel.h  (+18 more)
application/commandpalette/: artistsalbumscommandpalettescope.cpp  artistsalbumscommandpalettescope.h  trackscommandpalettescope.cpp  trackscommandpalettescope.h
application/lyrics/: abstractlyricformat.cpp  abstractlyricformat.h  basiclrcfilelyricformat.cpp  basiclrcfilelyricformat.h  lyricsdisplaywidget.cpp  lyricsdisplaywidget.h  lyricsdisplaywidget.ui
application/platformintegration/: winplatformintegration.cpp  winplatformintegration.h
application/print/: printcontroller.cpp  printcontroller.h  printpopover.cpp  printpopover.h  printpopover.ui  printsettings.cpp  printsettings.h  printsettings.ui
application/qtmultimedia/: qtmultimediamediaitem.cpp  qtmultimediamediaitem.h  qtmultimediaurlhandler.cpp  qtmultimediaurlhandler.h
application/settingspanes/: colourssettingspane.cpp  colourssettingspane.h  colourssettingspane.ui  libraryresetsettingspane.cpp  libraryresetsettingspane.h  libraryresetsettingspane.ui  notificationssettingspane.cpp  notificationssettingspane.h  notificationssettingspane.ui  titlebarsettingspane.cpp  titlebarsettingspane.h  titlebarsettingspane.ui
application/tageditor/: tageditor.cpp  tageditor.h  tageditor.ui
application/translations/: aa_ET.ts  ab_GE.ts  am_ET.ts  ar_AE.ts  ar_DZ.ts  ar_IQ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_LY.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_QA.ts  ar_SA.qm  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_SY.ts  ar_TN.ts  ar_YE.ts  as_IN.ts  au_AU.ts  az_AZ.ts  be_BY.ts  bg_BG.ts  bn_BD.ts  bs_BA.ts  ca_AD.ts  cr_CA.ts  cs.ts  cs_CZ.ts  da_DK.qm  da_DK.ts  de_CH.ts  de_DE.qm  de_DE.ts  dz_BT.ts  el_GR.ts  en_AU.ts  (+98 more)
application/visualisations/: scopevisualisation.cpp  scopevisualisation.h
libthebeat/: CMakeLists.txt  abstractlibrarybrowser.h  burnbackend.cpp  burnbackend.h  burnmanager.cpp  burnmanager.h  controlstripmanager.cpp  controlstripmanager.h  headerbackgroundcontroller.cpp  headerbackgroundcontroller.h  helpers.cpp  helpers.h  iurlmanager.h  libthebeat.pro  libthebeatConfig.cmake.in  libthebeat_global.h  mediaitem.cpp  mediaitem.h  playlist.cpp  playlist.h  plugininterface.h  pluginmediasource.cpp  pluginmediasource.h  sourcemanager.cpp  sourcemanager.h  statemanager.cpp  statemanager.h  thebeatcommon.cpp  thebeatcommon.h  thebeatplugininterface.h  urlhandler.cpp  urlhandler.h  urlmanager.cpp  urlmanager.h  visualisationengine.cpp  visualisationengine.h  visualisationmanager.cpp  visualisationmanager.h
plugins/: CMakeLists.txt  plugins.pri  plugins.pro
plugins/AvFoundationPlugin/: AvFoundationPlugin.json  AvFoundationPlugin.pro  CMakeLists.txt  airplaymanager.h  airplaymanager.mm  avfoundationmediaitem.h  avfoundationmediaitem.mm  avfoundationurlhandler.cpp  avfoundationurlhandler.h  avplayerinstance.h  avplayerinstance.mm  plugin.cpp  plugin.h
plugins/CdrdaoPlugin/: CMakeLists.txt  CdrdaoPlugin.json  CdrdaoPlugin.pro  abstractburnjob.cpp  abstractburnjob.h  burndevice.cpp  burndevice.h  burnjob.cpp  burnjob.h  burnjobmp3.cpp  burnjobmp3.h  burnjobwidget.cpp  burnjobwidget.h  burnjobwidget.ui  burnpopover.cpp  burnpopover.h  burnpopover.ui  drivewatcher.cpp  drivewatcher.h  fullburnjob.cpp  fullburnjob.h  plugin.cpp  plugin.h
plugins/DRPIntegration/: DRPIntegration.json  DRPIntegration.pro  plugin.cpp  plugin.h
plugins/GstPlugin/: CMakeLists.txt  cdmonitor.cpp  cdmonitor.h  cdwidget.cpp  cdwidget.h  cdwidget.ui  plugin.cpp  plugin.h
plugins/InternetRadioPlugin/: CMakeLists.txt  InternetRadioPlugin.json  InternetRadioPlugin.pro  favouritestationswidget.cpp  favouritestationswidget.h  favouritestationswidget.ui  plugin.cpp  plugin.h  radioinfoclient.cpp  radioinfoclient.h  radiopane.cpp  radiopane.h  radiopane.ui  stationsearchwidget.cpp  stationsearchwidget.h  stationsearchwidget.ui  stationwidget.cpp  stationwidget.h  stationwidget.ui
plugins/LastFmPlugin/: CMakeLists.txt  LastFmPlugin.json  lastfmapiservice.cpp  lastfmapiservice.h  plugin.cpp  plugin.h  scrobbleservice.cpp  scrobbleservice.h
plugins/LinuxIntegration/: CMakeLists.txt  LinuxIntegration.json  LinuxIntegration.pro  mprisinstance.cpp  mprisinstance.h  mprisplayer.cpp  mprisplayer.h  mprisplayerinterface.cpp  mprisplayerinterface.h  mpriswrapper.cpp  mpriswrapper.h  nativeevents.cpp  nativeevents.h  plugin.cpp  plugin.h
plugins/MacIntegration/: CMakeLists.txt  MacIntegration.json  MacIntegration.pro  mainwindowtouchbar-objc.mm  mainwindowtouchbar.cpp  (+6 more)
(+609 files in other folders)
